<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_for" />

    <EditText
        android:id="@+id/ordersSearchLine"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="ordersSearchClick"
        android:text="@string/search" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/all_dates_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_dates" />

        <RadioButton
            android:id="@+id/this_month_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_month" />

        <RadioButton
            android:id="@+id/this_week_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_week" />

       	<RadioButton
       	    android:id="@+id/today_button"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:text="@string/today" />

    </RadioGroup>

</LinearLayout>