<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue" >

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:onClick="logoutClick"
            android:text="@string/logout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/menu"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:onClick="settingsClick"
            android:text="@string/settings" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="15dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:gravity="center" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/dashboardButton"
                style="@style/MenuButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:onClick="dashboardButtonClick"
                android:text="@string/dashboard" />

            <Button
                android:id="@+id/usersButton"
                style="@style/MenuButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:onClick="usersButtonClick"
                android:text="@string/users" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/discountsButton"
                style="@style/MenuButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:onClick="discountsButtonClick"
                android:text="@string/discounts" />

            <Button
                android:id="@+id/productsButton"
                style="@style/MenuButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:onClick="productsButtonClick"
                android:text="@string/products" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/reviewsButton"
                style="@style/MenuButtonTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:onClick="reviewsButtonClick"
                android:text="@string/reviews" />
        </TableRow>
    </TableLayout>

</LinearLayout>